src/app/internet-plans/internet-plan-card/internet-plan-card.component.scss
:host {
  display: block;
  container-type: inline-size;
}

.card {
  display: flex;
  column-gap: 1rem;
  padding-right: 1.5rem;
  overflow: hidden;
  background-color: rgb(255 255 255);
  border-radius: 1rem;
  box-shadow: inset 0 0 0 1px rgb(240 240 240);

  @container (width <= 35em) {
    column-gap: 0.75rem;
    padding-right: 0.75rem;
  }
}

.card-segment {
  flex-shrink: 0;
  padding-top: 1rem;
  padding-bottom: 1.5rem;

  @container (width <= 35em) {
    padding-bottom: 1rem;
  }
}

.card-position {
  flex-shrink: 0;
  width: 3ch;
  padding-top: 1.25rem;
  font-size: 75%;
  color: rgb(110 110 110);
  text-align: center;
  background-color: rgb(240 240 240);

  @container (width <= 35em) {
    padding-top: 1.1rem;
  }
}

.plan-name {
  flex-basis: 25%;
  font-size: 150%;
  text-wrap: balance;

  @container (width <= 45em) {
    flex-basis: 35%;
  }

  @container (width <= 35em) {
    font-size: 125%;
  }

  @container (width <= 30em) {
    flex-basis: 30%;
  }
}

.plan-speed-wrapper {
  flex-basis: 15%;

  @container (width <= 45em) {
    flex-grow: 1;
  }
}

.plan-speed {
  display: flex;
  column-gap: 0.5rem;
  align-items: center;
}

.plan-download-speed {
  color: rgb(56 142 86);
}

.plan-upload-speed {
  color: rgb(61 138 206);

  @container (width <= 35em) {
    display: none;
  }
}

.plan-speed-icon {
  @container (width <= 35em) {
    display: none;
  }
}

.plan-benefit-list {
  flex-grow: 1;

  @container (width <= 45em) {
    display: none;
  }
}

.plan-benefit-item {
  display: flex;
  column-gap: 0.5rem;
  align-items: center;
}

.plan-benefit-icon {
  color: rgb(56 142 86);
}

.price-wrapper {
  display: flex;
  flex-basis: 20%;
  flex-direction: column;
  gap: 0.5rem;
  justify-content: space-between;

  @container (width <= 45em) {
    flex-basis: 25%;
  }

  @container (width <= 35em) {
    flex-direction: row;
    gap: 1rem;
    justify-content: end;
  }
}

.plan-price {
  align-self: end;
  font-size: 125%;
  font-weight: bold;
  line-height: 1.1;
  white-space: nowrap;

  @container (width <= 35em) {
    align-self: start;
  }
}

.details-link {
  display: flex;
  column-gap: 0.25em;
  align-items: center;
  justify-content: center;
  padding: 0.4em 0.75em;
  font-size: 85%;
  color: rgb(255 255 255);
  text-decoration: none;
  background-color: oklch(70.15% 0.202 52.41deg);
  border-radius: 0.9em;

  @container (width <= 35em) {
    padding-right: 0.5em;
    padding-left: 0.5em;
  }
}

.details-link-text {
  margin-top: -0.05em;

  @container (width <= 35em) {
    display: none;
  }
}

